Closed Bug 1122070 Opened 9 years ago Closed 9 years ago

TSan: data race netwerk/cache2/CacheIOThread.cpp:97 DispatchInternal

Categories

(Core :: Networking: Cache, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: froydnj, Assigned: michal)

References

(Blocks 1 open bug)

Details

(Whiteboard: [tsan])

Attachments

(2 files)

[cribbing from decoder's script, hopefully he won't mind]

The attached logfile shows a thread/data race detected by TSan (ThreadSanitizer).

Typically, races reported by TSan are not false positives, but it is possible that the race is benign. Even in this case though, we should try to come up with a fix unless this would cause unacceptable performance issues. Also note that seemingly benign races can possibly be harmful (also depending on the compiler and the architecture) [1].

If the bug cannot be fixed, then this bug should be used to either make a compile-time annotation for blacklisting or add an entry to the runtime blacklist.

[1] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
Summary: TSan: data race → TSan: data race netwerk/cache2/CacheIOThread.cpp:97 DispatchInternal
Attached patch fixSplinter Review
Attachment #8610291 - Flags: review?(honzab.moz)
Comment on attachment 8610291 [details] [diff] [review]
fix

Review of attachment 8610291 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks.
Attachment #8610291 - Flags: review?(honzab.moz) → review+
https://hg.mozilla.org/mozilla-central/rev/33435f6629bf
Assignee: nobody → michal.novotny
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: